# pdfmerge

./: .cspell.json  .gitattributes  .gitignore  .pylint.ini  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.markdown  LICENSE.md  MANIFEST.in  README.markdown  README.md  VERSION  build.xml  pdfmerge.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yaml  codeql-analysis.yml  pypi.yaml
docs/: __main__.html  index.html
installer/: pdfmerge.iss
scripts/: pdfmerge  pdfmerge.bat
src/pdfmerge/: __init__.py  __main__.py
test/: TestMerge.py  test_pdfmerge.py
